--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "start": "node index.js"
+    "start": "env $(cat dev.env | xargs) node index.js"
   },
   "dependencies": {
     "dayjs": "^1.10.7",
-    "dinero.js": "^1.9.1"
+    "dinero.js": "^1.9.1",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "jest": "^27.3.1"
