--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,14 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "start": "env $(cat dev.env | xargs) node index.js"
+    "start": "env $(cat dev.env | xargs) node index.js",
+    "start_db": "env $(cat dev.env | xargs) docker compose up",
+    "stop_db": "env $(cat dev.env | xargs) docker compose down"
   },
   "dependencies": {
     "dayjs": "^1.10.7",
     "dinero.js": "^1.9.1",
+    "express": "^4.17.1",
     "pg": "^8.7.1"
   },
   "devDependencies": {
