--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
           timeout: 45s
           interval: 10s
           retries: 10
+        volumes:
+          - ./db/data:/var/lib/postgresql/data
         env_file: dev.env
         ports:
           - ${POSTGRES_PORT}:5432
